--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -44,10 +44,10 @@ Algotrader | Stock Info
                     </div>
                     <div class="fmp-pne-eps">
                         <div class="help-cursor">
-                            P/E <i class="fas fa-info-circle info-icon pl-1 pr-1 jb-info-4"></i> <span class="fmp-pe font-weight-bold"></span>
+                            P/E <i class="fas fa-info-circle info-icon pl-1 pr-1 jb-tooltip-info jb-info-4" data-tooltip-id="4"></i> <span class="fmp-pe font-weight-bold"></span>
                         </div>
                         <div class="help-cursor">
-                            EPS <i class="fas fa-info-circle info-icon pl-1 pr-1 jb-info-3"></i> <span class="fmp-eps"></span>
+                            EPS <i class="fas fa-info-circle info-icon pl-1 pr-1 jb-tooltip-info jb-info-3" data-tooltip-id="3"></i> <span class="fmp-eps"></span>
                         </div>
                     </div>
                 </div>
@@ -121,6 +121,7 @@ Algotrader | Stock Info
                             <script> var hist_data = '{{ hist_data|tojson }}'; </script>
                             <script> var ticker = '{{ candidate.ticker }}'; </script>
                             <script> var user_email = '{{ current_user.email }}'; </script>
+                            <script> var TOOLTIPS = {{ tooltips|tojson }}; </script>
                         </div>
                     </div>
                 </div>
@@ -238,6 +239,16 @@ Algotrader | Stock Info
                                     <div class="card-body tab-fundamentals-summary-card" style="position: relative;">
                                         <div class="card-header">
                                             Fundamentals (12 Month)
+                                        </div>
+                                        <div class="div-content row pt-2"></div>
+                                        {% include 'layouts/loader.html' %}
+                                    </div>
+                                </div>
+                                <div class="main-card mb-3 card">
+                                    <div class="card-body tab-fundamentals-feed-card" style="position: relative;">
+                                        <div class="card-header">
+<!--                                            <div>2021-09-25</div>-->
+<!--                                            <div>2021 - Q4</div>-->
                                         </div>
                                         <div class="div-content row pt-2"></div>
                                         {% include 'layouts/loader.html' %}
