--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -245,13 +245,8 @@ Algotrader | Stock Info
                                     </div>
                                 </div>
                                 <div class="main-card mb-3 card">
-                                    <div class="card-body tab-fundamentals-feed-card" style="position: relative;">
-                                        <div class="card-header">
-<!--                                            <div>2021-09-25</div>-->
-<!--                                            <div>2021 - Q4</div>-->
-                                        </div>
-                                        <div class="div-content row pt-2"></div>
-                                        {% include 'layouts/loader.html' %}
+                                    <div class="card-body tab-fundamentals-feed-card row" style="position: relative;">
+
                                     </div>
                                 </div>
                             </div>
