--- a/app/templates/partial/ticker_info_fundamentals.html
+++ b/app/templates/partial/ticker_info_fundamentals.html
@@ -1,7 +1,7 @@
 {% for d in data %}
 <div class="col-md-4" style="display: flex; justify-content: space-between; padding-top: 0.8%; border-bottom: 1px solid rgba(26,54,126,0.125);">
     <div class="col-md-9">
-        <i data-tooltip-id="{{d['tooltip']}}" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-{{d['tooltip']}}"></i> {{d['field_name']}}:
+        <i data-tooltip-id="{{d['tooltip']}}" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-{{d['tooltip']}}"></i> {{d['field_name']}}
     </div>
     <div class="col-md-3" style="text-align: right;">
         {% if d['value'] is not none %}
