main moto changed

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -9,7 +9,8 @@ Algotrader
     <header class="main-header">
         <div class="container">
             <div class="section-title font-weight-bold">
-                <h2>Analytics driven automated trading</h2>
+<!--                <h2>Analytics driven automated trading</h2>-->
+                <h2>AI Stock Anlytics and Market Emotions</h2>
             </div>
             <div class="main-cards">
                 <div class="row">
