--- a/app/templates/mainpage/main.html
+++ b/app/templates/mainpage/main.html
@@ -14,7 +14,9 @@ Algotrader
         <div class="analytics__wrap wrap">
             <div class="analytics__row row">
                 <div class="analytics__col analytics__col_left">
-                    <h1 class="analytics__title">Analytics driven automated trading</h1>
+<!--                    <h1 class="analytics__title">Analytics driven automated trading</h1>-->
+
+                    <h1 class="analytics__title">AI Stock Anlytics</h1><h1 class="analytics__title">and</h1><h1 class="analytics__title"> Market Emotions</h1>
                 </div>
                 <div class="analytics__col analytics__col_right">
                     <div class="analytics__items">
