--- a/app/templates/partial/ticker_info_fundamentals_feed.html
+++ b/app/templates/partial/ticker_info_fundamentals_feed.html
@@ -1,13 +1,13 @@
 {% for d in data %}
 <div class="col-md-4">
-    <div style="border: 1px solid rgba(26,54,126,0.125);" class="m-1">
+    <div style="border: 3px solid rgba(26,54,126,0.125);" class="m-1">
         <div class="card-header" style="justify-content: space-between; background: rgb(210 214 226 / 13%);">
             <div style="font-size: smaller;">{{d['date']}}</div>
             <div>{{d['calendarYear']}} - {{d['period']}}</div>
         </div>
         <div class="div-content pt-2">
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
-                <div class="col-md-7">
+                <div class="col-md-7" style="padding-left: 2.35rem;">
                     Revenue
                 </div>
                 <div class="col-md-5" style="text-align: right;">
@@ -16,7 +16,7 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    NET Income
+                    <i data-tooltip-id="55" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-55"></i> NET Income
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['netIncome']}}
@@ -24,7 +24,7 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    EPS
+                    <i data-tooltip-id="3" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-3"></i> EPS
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['eps']|round(2)}}
@@ -32,7 +32,7 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    EBITDA ratio
+                    <i data-tooltip-id="2" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-2"></i> EBITDA ratio
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['ebitdaratio']|round(2)}}
@@ -40,7 +40,7 @@
             </div>
             <div style="font-size: small; display: flex; justify-content: space-between; padding-top: 0.5%; border-bottom: 1px solid rgba(26,54,126,0.125);">
                 <div class="col-md-7">
-                    Gross Profit ratio
+                    <i data-tooltip-id="54" class="fas fa-info-circle info-icon pr-1 jb-tooltip-info jb-info-54"></i> Gross Profit ratio
                 </div>
                 <div class="col-md-5" style="text-align: right;">
                     {{d['grossProfitRatio']|round(2)}}
@@ -54,6 +54,7 @@
                 </div>
             </div>
         </div>
+        {% include 'layouts/loader.html' %}
     </div>
 </div>
 {% endfor %}
