--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -121,7 +121,7 @@ Algotrader | Stock Info
                             <script> var hist_data = '{{ hist_data|tojson }}'; </script>
                             <script> var ticker = '{{ candidate.ticker }}'; </script>
                             <script> var user_email = '{{ current_user.email }}'; </script>
-                            <script> var TOOLTIPS = {{ tooltips|tojson }}; </script>
+                            <script> TOOLTIPS = {{ tooltips|tojson }}; </script>
                         </div>
                     </div>
                 </div>
