--- a/app/static/styles/ticker_info.css
+++ b/app/static/styles/ticker_info.css
@@ -1,7 +1,10 @@
-.ticker-web,
-.ticker-web:hover{
-    color: rgba(0,0,0,.87);
-    text-decoration: none;
+#ticker-info-modal .list-group-item{
+    display: flex;
+    justify-content: space-between;
+}
+
+.page-title-heading:hover{
+    cursor: pointer;
 }
 
 .page-logo,
@@ -13,6 +16,14 @@
 
 .page-fmp-data{
     margin-left: -3%;
+}
+
+.modal-ticker-logo .menu__link.article-link {
+    font-size: 20px;
+    color: #4183c4;
+    padding-top: 15%;
+    text-align: center;
+    margin-right: 10px;
 }
 
 .page-fmp-data .div-content{
