--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -12,25 +12,29 @@ Algotrader | Stock Info
     <div class="app-page-title">
         <div class="page-title-wrapper">
             <div class="page-logo">
-                <a class="ticker-web" target="_blank" href="{{candidate.website}}">
-                    <div class="page-title-heading">
-                        <div>
-                            <img src="{{candidate.logo}}" style="height:60px;padding-right: 10px;">
-                        </div>
-                        <div>
-                            {{candidate.ticker}}
-                            <div class="page-title-subheading">
-                                {{candidate.company_name}}
-                            </div>
+                <div class="page-title-heading">
+                    <div>
+                        <img src="{{candidate.logo}}" style="height:60px;padding-right: 10px;">
+                    </div>
+                    <div>
+                        {{candidate.ticker}}
+                        <div class="page-title-subheading">
+                            {{candidate.company_name}}
                         </div>
                     </div>
-                    </a>
+                </div>
                 <div>
                     <div class="mt-2 mr-2 badge {{bg_upd_color}} badge-pill">Last Update(UTC) :
                         {{last_update}}
                     </div>
                 </div>
+                <div>
+                    <div class="mt-1 ml-2"><a class="ticker-web menu__link article-link" target="_blank" href="{{candidate.website}}">Go to website</a></div>
+                </div>
             </div>
+
+            <div style="display: none" id="ticker-info-modal"></div>
+
             <div class="page-fmp-data">
                 <div class="div-content">
                     <div class="fmp-price-content">
@@ -120,6 +124,7 @@ Algotrader | Stock Info
                         <div>
                             <script> var hist_data = '{{ hist_data|tojson }}'; </script>
                             <script> var ticker = '{{ candidate.ticker }}'; </script>
+                            <script> var company_name = '{{ candidate.company_name }}'; </script>
                             <script> var user_email = '{{ current_user.email }}'; </script>
                             <script> TOOLTIPS = {{ tooltips|tojson }}; </script>
                         </div>
