--- a/app/templates/admin/manage_user.html
+++ b/app/templates/admin/manage_user.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/base_old.html' %}
 {% import 'macros/form_macros.html' as f %}
 {% block page_title %}
 Algotrader | Manage user
