--- a/app/templates/admin/new_user.html
+++ b/app/templates/admin/new_user.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/base_old.html' %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
 {% block page_title %}
