--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -196,9 +196,9 @@
                     <div class="btn-close-falcon" aria-label="Close"></div>
                   </div>
                   <div class="dropdown-menu border font-base start-0 mt-2 py-0 overflow-hidden w-100">
-                    <div class="scrollbar list py-3" style="max-height: 24rem;">
+                    <div id="search_results" class="scrollbar list py-3" style="max-height: 24rem;">
 
-                      <h6 id="search_results" class="dropdown-header fw-medium text-uppercase px-card fs--2 pt-0 pb-2">Tickers</h6>
+                      <h6  class="dropdown-header fw-medium text-uppercase px-card fs--2 pt-0 pb-2">Tickers</h6>
 
                     </div>
                     <div class="text-center mt-n3">
