--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -188,7 +188,7 @@
             <ul class="navbar-nav align-items-center d-lg-block">
               <li class="nav-item">
                 <div class="search-box" data-list='{"valueNames":["title"]}'>
-                  <form class="position-relative" data-bs-toggle="search" data-bs-display="static">
+                  <form id="header_search" class="position-relative" data-bs-toggle="search" data-bs-display="static">
                     <input class="form-control search-input " type="search" placeholder="Search..." aria-label="Search" />
                     <span class="fas fa-search search-box-icon"></span>
                   </form>
@@ -197,9 +197,7 @@
                   </div>
                   <div class="dropdown-menu border font-base start-0 mt-2 py-0 overflow-hidden w-100">
                     <div id="search_results" class="scrollbar list py-3" style="max-height: 24rem;">
-
                       <h6  class="dropdown-header fw-medium text-uppercase px-card fs--2 pt-0 pb-2">Tickers</h6>
-
                     </div>
                     <div class="text-center mt-n3">
                       <p class="fallback fw-bold fs-1 d-none">No Result Found.</p>
