--- a/app/templates/account/unconfirmed.html
+++ b/app/templates/account/unconfirmed.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/main.html' %}
+{% extends 'layouts/base_old.html' %}
 {% block page_title %}
 Algotrader | Unconfirmed
 {% endblock %}
