--- a/app/templates/mainpage/header.html
+++ b/app/templates/mainpage/header.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="menu__item">
-                        <a href="/account/subscriptions" class="menu__link">
+                        <a href="/account/register" class="menu__link">
                             Register
                         </a>
                     </li>
@@ -80,7 +80,7 @@
                                     </a>
                                 </li>
                                 <li class="menuMobile__item">
-                                    <a href="/account/subscriptions" class="menuMobile__link">
+                                    <a href="/account/register" class="menuMobile__link">
                                         Register
                                     </a>
                                 </li>
