--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -141,6 +141,17 @@
                     </div>
                   </div>
                     <!-- parent pages-->
+                  {% if not current_user.is_admin() and current_user.subscription_type_id == 4 and not current_user.admin_confirmed%}
+                   <a class="nav-link" href="/station/registration_steps/1" role="button" aria-expanded="false">
+                    <div class="d-flex align-items-center">
+                      <span class="nav-link-icon">
+                        <span class="far fa-address-card"></span>
+                      </span>
+                      <span class="nav-link-text ps-1">Registration Confirmation</span>
+                    </div>
+                  </a>
+                  {%endif%}
+                  {% if not current_user.is_admin() and current_user.subscription_type_id == 4 and current_user.admin_confirmed and current_user.signature%}
                   <a class="nav-link" href="/userview/traderstationstate" role="button" aria-expanded="false">
                     <div class="d-flex align-items-center">
                       <span class="nav-link-icon">
@@ -149,7 +160,27 @@
                       <span class="nav-link-text ps-1">Trader Station</span>
                     </div>
                   </a>
+                  {%elif current_user.is_admin()%}
+                  <a class="nav-link" href="/admin/" role="button" aria-expanded="false">
+                    <div class="d-flex align-items-center">
+                      <span class="nav-link-icon">
+                        <span class="fas fa-tools"></span>
+                      </span>
+                      <span class="nav-link-text ps-1">Administrator Dashboard</span>
+                    </div>
+                  </a>
+                  {%endif%}
                     <!-- parent pages-->
+                  {% if current_user.is_admin()%}
+                  <a class="nav-link" href="https://www.interactivebrokers.co.uk/portal/?action=ACCT_MGMT_MAIN&loginType=1&clt=0&RL=1#/portfolio/performance" role="button" aria-expanded="false">
+                    <div class="d-flex align-items-center">
+                      <span class="nav-link-icon">
+                        <span class="fas fa-coins"></span>
+                      </span>
+                      <span class="nav-link-text ps-1">Performance</span>
+                    </div>
+                  </a>
+                  {% elif current_user.subscription_type_id == 4 and current_user.admin_confirmed and current_user.signature%}
                   <a class="nav-link" href="/userview/closedpositions" role="button" aria-expanded="false">
                     <div class="d-flex align-items-center">
                       <span class="nav-link-icon">
@@ -158,7 +189,9 @@
                       <span class="nav-link-text ps-1">Performance</span>
                     </div>
                   </a>
+                  {%endif%}
                     <!-- parent pages-->
+                  {% if not current_user.is_admin() and ((current_user.subscription_type_id == 4 and current_user.admin_confirmed and current_user.signature) or current_user.subscription_type_id == 2) %}
                   <a class="nav-link" href="/algotradersettings/usersettings" role="button" aria-expanded="false">
                     <div class="d-flex align-items-center">
                       <span class="nav-link-icon">
@@ -167,6 +200,7 @@
                       <span class="nav-link-text ps-1">Personal settings</span>
                     </div>
                   </a>
+                  {%endif%}
                 </li>
               </ul>
             </div>
@@ -187,23 +221,9 @@
             </a>
             <ul class="navbar-nav align-items-center d-lg-block">
               <li class="nav-item">
-                <div class="search-box" data-list='{"valueNames":["title"]}'>
-                  <form id="header_search" class="position-relative" data-bs-toggle="search" data-bs-display="static">
-                    <input class="form-control search-input " type="search" placeholder="Search..." aria-label="Search" />
-                    <span class="fas fa-search search-box-icon"></span>
-                  </form>
-                  <div class="btn-close-falcon-container position-absolute end-0 top-50 translate-middle shadow-none" data-bs-dismiss="search">
-                    <div class="btn-close-falcon" aria-label="Close"></div>
-                  </div>
-                  <div class="dropdown-menu border font-base start-0 mt-2 py-0 overflow-hidden w-100">
-                    <div id="search_results" class="scrollbar list py-3" style="max-height: 24rem;">
-                      <h6  class="dropdown-header fw-medium text-uppercase px-card fs--2 pt-0 pb-2">Tickers</h6>
-                    </div>
-                    <div class="text-center mt-n3">
-                      <p class="fallback fw-bold fs-1 d-none">No Result Found.</p>
-                    </div>
-                  </div>
-                </div>
+                {% with id='header' %}
+                {% include 'partial/search.html' %}
+                {% endwith %}
               </li>
             </ul>
             <ul class="navbar-nav navbar-nav-icons ms-auto flex-row align-items-center">
@@ -366,6 +386,9 @@
     </div>
     {% endif %}
     {% block scripting %} {% endblock %}
+
+<!--    TOAST     -->
+  <div class="position-fixed bottom-0 end-0 p-3 toasts-block" style="z-index: 5"></div>
     {% block modal %} {% endblock %}
   </body>
 
